--- a/OnlineSalonMgmt/src/main/resources/application.properties
+++ b/OnlineSalonMgmt/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.context-path=/salonapp
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 spring.datasource.username=system
-spring.datasource.password=ankush
+spring.datasource.password=mallickm123
 
  
 
