--- a/OnlineSalonMgmt/bin/src/main/resources/application.properties
+++ b/OnlineSalonMgmt/bin/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+server.port=8082
+server.servlet.context-path=/salonapp
+
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=system
+spring.datasource.password=oracle
+
+ 
+
+
+#Hibernate JPA Properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+
+
 
