--- a/OnlineSalonMgmt/src/main/resources/application.properties
+++ b/OnlineSalonMgmt/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.servlet.context-path=/salonapp
 
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
-spring.datasource.username=system
 
-spring.datasource.password=mallickm123
+spring.datasource.username=system
+spring.datasource.password=oracle
 
 
  
