--- a/OnlineSalonMgmt/src/main/resources/application.properties
+++ b/OnlineSalonMgmt/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
 
 spring.datasource.username=system
-spring.datasource.password=tiger
+spring.datasource.password=mallickm123
 
 
  
